--- a/AdminPortal/src/index.html
+++ b/AdminPortal/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Distribution One | Portal</title>
+  <title>BRP Developement | Portal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="/assets/img/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="/assets/img/BRP-Logo-White.png">
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
