--- a/AdminPortal/src/index.html
+++ b/AdminPortal/src/index.html
@@ -1,20 +1,34 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>BRP Developement | Portal</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="/assets/img/BRP-Logo-White.png">
+  
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
+    rel="stylesheet">
+  <!-- New -->
+  <link rel="stylesheet" href="assets/css/dataTables.bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
 </body>
+<!-- New -->
+<script src="assets/js/jquery-1.12.3.js"></script>
+<script src="assets/js/jquery.dataTables.min.js"></script>
+<script src="assets/js/dataTables.responsive.min.js"></script>
+<script src="assets/js/dataTables.bootstrap.min.js"></script>
+<script src="assets/js/main.js"></script>
 </html>
